# OMlang-Compiler

./: README.md  om.py  pyproject.toml  setup.py
.github/workflows/: om-ci.yml
om-core/: compiler.py  lexer.py  main.py  opcodes.py  parser.py  vm.py
