[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omlang"
version = "4.0.0"
description = "The independent Om Programming Language Compiler and Bytecode VM Engine"
readme = "README.md"
authors = [{ name = "Om Creator" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
    "Development Status :: 4 - Beta"
]

[project.scripts]
om = "main:main_entry"